[project]
name = "saf-stig-generator"
version = "0.1.0"
description = "An agentic system to autonomously generate and validate MITRE SAF InSpec baselines."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12"
dependencies = [
  # Google ADK for agent development
  "google-adk",
  "google-generativeai",
  "google-cloud-aiplatform[agent_engines,adk]",
  "python-dotenv",
  "selenium",
  "webdriver-manager",

  # MCP SDK for building and interacting with tools
  "fastmcp",
  "anyio",   # For async thread execution

  # Web requests and parsing
  "requests",
  "beautifulsoup4",

  # MCP Server Frameworks
  "uvicorn[standard]",
  "fastapi",
  "pydantic",
  "starlette",

  # Docker interaction
  "docker",

]

[project.optional-dependencies]
# Testing dependencies
dev = [
  "pytest",
  "pytest-asyncio",
  "respx",          # For mocking HTTP requests in tests
  "httpx",          # For making HTTP requests in tests
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "T", "Q"]
ignore = ["E203"]

[project.scripts]
start-agent = "adk run -c run.yaml"
start-disa-tool-sse = "python -m agents.services.disa_stig_tool.disa_stig_tool --sse 127.0.0.1 3001"
start-disa-tool-http = "python -m agents.services.disa_stig_tool.disa_stig_tool --http 127.0.0.1 3001"
start-mitre-tool = "uvicorn agents.services.mitre_baseline_tool.mitre_baseline_tool:starlette_app --reload --port 3002"
start-saf-tool = "uvicorn agents.services.saf_generator_tool.saf_generator_tool:starlette_app --reload --port 3003"
start-docker-tool = "uvicorn agents.services.docker_tool.docker_tool:starlette_app --reload --port 3004"
start-inspec-tool = "uvicorn agents.services.inspec_runner_tool.inspec_runner_tool:starlette_app --reload --port 3005"
test = "pytest"
