[project]
name = "saf-stig-generator"
version = "0.1.0"
description = "An agentic system to autonomously generate and validate MITRE SAF InSpec baselines."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12"
dependencies = [
  # Google ADK for agent development
  "google-adk",
  "google-generativeai",
  "google-cloud-aiplatform[agent_engines,adk]",
  "python-dotenv",
  "selenium",
  "webdriver-manager",

  # MCP SDK for building and interacting with tools
  "fastmcp",
  "anyio",   # For async thread execution

  # Web requests and parsing
  "requests",
  "beautifulsoup4",

  # MCP Server Frameworks
  "uvicorn[standard]",
  "fastapi",
  "pydantic",
  "starlette",

  # Docker interaction
  "docker",

]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "scripts*"]
exclude = ["tests*", "notes*", "docker*", "artifacts*"]

[project.optional-dependencies]
# Testing dependencies
dev = [
  "pytest",
  "pytest-asyncio",
  "respx",          # For mocking HTTP requests in tests
  "httpx",          # For making HTTP requests in tests
]

[project.scripts]
start-agent = "scripts.entry_points:start_agent"
start-disa-tool-sse = "scripts.entry_points:start_disa_tool_sse"
start-disa-tool-http = "scripts.entry_points:start_disa_tool_http"
start-mitre-tool = "scripts.entry_points:start_mitre_tool"
start-saf-tool = "scripts.entry_points:start_saf_tool"
start-docker-tool = "scripts.entry_points:start_docker_tool"
start-inspec-tool = "scripts.entry_points:start_inspec_tool"
test = "scripts.entry_points:run_tests"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "T", "Q"]
ignore = ["E203"]
